--- a/user/package.json
+++ b/user/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@qirolab/nuxt-sanctum-authentication": "^0.1.15",
+    "bootstrap": "^5.3.8",
     "nuxt": "^3.18.1",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.14.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.14"
   }
 }
